[BUILD] Build improvements
* Each module has its own build.gradle
* Functionality moved into plugins in buildSrc/
* Add Spring javaformat
* Add release plugins (#20)

Fixes #21